fix: forgot to adjust the textarea to dark mode

--- a/assets/css/tailwind_compiled.css
+++ b/assets/css/tailwind_compiled.css
@@ -1016,6 +1016,20 @@ video {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
+textarea {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+textarea:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
+}
+
 button:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
